--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,56 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    background-color: lightblue;
+  }
+  
+  .div1 {
+    background-color: white;
+    width: 50%;
+    border: 15px solid blue;
+    padding: 20px;
+    margin: 20px;
+  }
+  
+  .div2 {
+    background-color: lightgray;
+    width: 50%;
+    border: 15px solid blue;
+    padding: 20px;
+    margin: 20px;
+  }
+  
+  img {
+    width: 80%;
+  }
+  
+  #myDIV {
+    width: 300px;
+    height: 200px;
+    background: red;
+    animation: mymove 2;
+  }
+  
+  @keyframes mymove {
+    from {background-color: red;}
+    to {background-color: blue;}
+  }
+  
+  button {
+    animation: none 2;
+    border: none;
+    background-color: blue;
+    color: white;
+    padding: 15px 32px;
+    margin: 5px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
+  
+  .buttonHidden {
+    visibility: hidden;
+  }
