--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,49 @@
 body {
     background-color: lightblue;
   }
+
+  #topBar {
+    display: flex;
+    flex-direction: row;
+    color: rgb(248 250 252);
+    background: rgb(30 41 59);
+  }
+
+  #topBar h1 {
+    flex-grow: 1;
+    vertical-align: middle;
+    align-self: center;
+    margin-left: 1.5rem;
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  #topBar button {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    margin-left: 0.25rem;
+    border-radius: 0.25rem;
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .assessment-body {
+    border-radius: 0.25rem;
+    padding: 0;
+    margin: 0;
+  }
+
+  #questionBox {
+    padding: 1.5rem;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .assessment-buttons {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+  }
   
   .div1 {
     background-color: white;
@@ -21,9 +64,10 @@ body {
     padding: 20px;
     margin: 20px;
   }
-  
+
   img {
-    width: 80%;
+    max-width: 100%;
+    flex-grow: initial;
   }
   
   #myDIV {
@@ -37,18 +81,25 @@ body {
     from {background-color: red;}
     to {background-color: blue;}
   }
-  
+
   button {
     animation: none 2;
     border: none;
-    background-color: blue;
-    color: white;
+    border-radius: 0.25rem;
     padding: 15px 32px;
     margin: 5px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 16px;
+  }
+  
+  .assessment-buttons button {
+    background-color: indigo;
+    color: white;
+  }
+
+  button:hover {
+    background-color: rgb(106, 63, 136);
   }
   
   .buttonHidden {
