--- a/app/globals.css
+++ b/app/globals.css
@@ -174,6 +174,10 @@ button {
     font-size: 16px;
 }
 
+.assessment-buttons button:disabled {
+    background-color: rgb(81, 93, 104);
+}
+
 .assessment-buttons button {
     background-color: indigo;
     color: white;
