--- a/app/globals.css
+++ b/app/globals.css
@@ -192,7 +192,7 @@ button:hover {
 }
 
 
-/*-----------Richard login page -----------*/
+/*-----------Richard's pages-----------*/
   
   /* Add a green text color and a checkmark when the requirements are right */
   .valid {
@@ -219,6 +219,90 @@ button:hover {
   .hide {
     visibility: hidden;
   }
+
+
+  .richTopBar {
+    background-color: rgb(0, 0, 128, 0.7);
+    width: auto;
+    color: white;
+    font-size: 27pt;
+    flex: auto;
+    padding: 10px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+  }
+
+  .richContainer {
+    width:auto;
+    margin:0 auto;
+    overflow: hidden;
+    background-color: rgb(242, 242, 242, 0.6);
+    padding: 20px;
+    color: rgb(0, 0, 0);
+  }
+
+  .richbutton {
+    /* background-color: blue; Green */
+    background-color: var(--main-blue);
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 18px;
+    border-radius: 4px;
+  }
+
+  .div3 {
+    background-color: lightgray;
+    width: 50%;
+    /*border: 15px solid blue;*/
+    border-radius: 15pt;
+    box-shadow: 0px 0px 0px 7px rgb(0, 0, 255) inset, 0px 0px 20px 10px rgb(0, 0, 0);
+    padding: 20px;
+    margin: auto;
+    margin-top: 25px;
+    text-align: center;
+    font-family:Verdana, Geneva, Tahoma, sans-serif ;
+    font-size: 20pt;
+    font-weight: bold;
+  }
+
+  .loginbuttons {
+    margin-bottom: 20px;
+    font-size: 20pt;
+    
+  }
+  .loginbuttons1 {
+    font-size: 16pt;
+  }
+
+  .user {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 16pt;
+    font-weight: bold;
+  }
+  
+  .pass {
+    font-size: 16pt;
+    font-weight: bold;
+  }
+  
+  .req {
+    font-size: 10pt;
+    margin-bottom: 15px;
+  }
+  
+  .asdf {
+    font-size: 16pt;
+  }
+
+
+
+
+  /*-----------Lentz's page -----------*/
   .lentzParagraph{
     background-color: white;
     padding: 15px 10px;
